@@ -1,4 +1,5 @@
 1.1-dev
+ * fix NPE in cql3 ALTER TABLE (CASSANDRA-4163)
  * (cqlsh) fix recognizing uppercase SELECT keyword (CASSANDRA-4161)
  * average a reduced liveRatio estimate with the previous one (CASSANDRA-4065)
  * Allow KS and CF names up to 48 characters (CASSANDRA-4157)
